--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 }
 
 .container {
-  border: 1px dashed black;
   margin: 0 auto;
   text-align: center;
   height: 600px;
@@ -26,6 +25,10 @@
   border: 1px solid black;
 }
 
+#question[type="text"]:focus {
+  background-color: blue;
+}
+
 .eight-ball {
   border: 1px solid black;
   border-radius: 50%;
@@ -37,7 +40,7 @@
 }
 
 .answer {
-  background-color: white;
+  background-color: grey;
   border: 1px solid grey;
   border-radius: 50%;
   width: 50%;
@@ -47,7 +50,7 @@
 }
 
 #eight {
-  color: grey;
+  color: blue;
   margin: auto 0;
   margin-top: 40px;
   font-size: 100px;
@@ -56,7 +59,7 @@
 }
 
 #answer {
-  color: grey;
+  color: blue;
   padding: 35px;
   letter-spacing: 1px;
   font-size: 20px;
